logs/run/t2464-run.log
Test.scala:5: error: ';' expected but '.' found.
import scala.tools.partest._.modifyClassFile
                            ^
one error found
